# outreachjob

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-staging.yml
app/: __init__.py  deps.py  main.py
app/core/: __init__.py  audit.py  config.py  encryption.py  exceptions.py  logging.py  pagination.py  security.py
app/db/: __init__.py  init.py
app/models/: __init__.py  audit_log.py  campaign.py  credit_balance.py  credit_ledger.py  email_verification_result.py  enrichment_result.py  failed_job.py  gmail_account.py  payment_order.py  recipient_item.py  recipient_list.py  resume_document.py  scheduled_email.py  suppression_entry.py  system_recipient.py  template.py  user.py
app/routers/: admin.py  auth.py  campaigns.py  credits.py  enrich.py  gmail.py  lists.py  onboarding.py  payments.py  referrals.py  resume.py  suppressions.py  templates.py  verify.py
app/services/: admin_recipients.py  campaigns.py  credits.py  enrichment.py  gmail.py  payments.py  rate_limit.py  recipients.py  referrals.py  resume.py  resume_analyzer.py  (+5 more)
docs/: API.md  CICD_SETUP.md  IMPLEMENTATION_STATUS.md  INFRA_AWS.md  INFRA_STAGING_ONLY.md  LOCAL_RUN.md  SETUP.md  STAGING_NEXT_STEPS.md  STAGING_SECRETS_CHECKLIST.md
scripts/: aws-staging-setup.sh  ecs-task-definition-api.json  ecs-task-definition-worker.json  push-to-github.sh  staging-deploy.sh  start-redis.sh  verify-staging-secret.sh
tests/: conftest.py  test_credits_service.py  test_health.py
(+12 files in other folders)
